style: project links wrap fix

--- a/src/templates/Project.scss
+++ b/src/templates/Project.scss
@@ -38,6 +38,7 @@
           text-transform: capitalize;
           span {
             font-weight: 300;
+            word-wrap: break-word;
           }
           .tech-used {
             margin: 10px 0;
